# infra-inspect-ai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/building_codes/: README.md
data/eval/: retrieval_eval_set.json
docs/: README.md  architecture.md  deployment.md  eval-methodology.md  observability.md  rag-pipeline.md  workflow.md
docs/adr/: 0001-langgraph-over-langchain-pipelines.md  0002-multi-provider-llm-routing.md  0003-hybrid-rag-with-rrf-and-reranker.md  0004-empirical-threshold-tuning.md  0005-server-side-aggregation-over-llm.md  0006-bge-semantic-change-detection.md  0007-mcp-for-side-effects.md  0008-correlation-ids-end-to-end.md  README.md
scripts/: build_bm25.py  diagnose_retrieval.py  evaluate_compliance.py  evaluate_retrieval.py  ingest_codes.py  inspect_mcp.py  run_api.py  run_filesystem_server.py  run_notification_server.py  run_streamlit.py  run_workorder_server.py  seed_memory.py  sweep_threshold.py  test_inspection.py  test_mcp_filesystem.py  test_mcp_notification.py  test_mcp_workorder.py  test_memory.py  test_retrieval.py  test_watsonx.py  test_workflow.py
src/: bootstrap.py
src/agents/: base.py  compliance.py  documentation.py  followup.py  inspection.py  risk.py  workorder.py
src/api/: __init__.py  app.py  dependencies.py  request_context.py
src/api/routes/: health.py  inspections.py  memory.py
src/api/schemas/: api_models.py
src/config/: settings.py
src/graph/: workflow.py
src/llm/: router.py
src/mcp_clients/: client.py  connections.py  manager.py
src/mcp_servers/: filesystem_server.py  notification_server.py  workorder_server.py
src/memory/: change_detection.py  connection.py  repository.py  store.py
src/prompts/: compliance.py  documentation.py  followup.py  inspection.py  risk.py  workorder.py
src/rag/: bm25.py  chunking.py  contextual.py  embeddings.py  hybrid.py  ingest.py  ocr.py  reranker.py  retriever.py  vectorstore.py
src/schemas/: __init__.py  compliance.py  documentation.py  enums.py  followup.py  inspection.py  memory.py  risk.py  state.py  workorder.py
src/tracing/: __init__.py  setup.py
src/utils/: cache.py  logging.py  structured_output.py
tests/: README.md  conftest.py  test_change_detection.py  test_risk_helpers.py  test_schemas.py  test_workflow_helpers.py
